Migrate LPhyBEAST mapping to 2.0 typed XML path